fixed the missing color of the logo wrap to be black on load for small screens

--- a/css/style_tour.css
+++ b/css/style_tour.css
@@ -1245,6 +1245,11 @@ footer img:hover {
 
     header {
         padding: 0 5px 0 5px;
+        background: white;
+        color:black;
+    }
+    .logo-name-container{
+        color: black;
     }
 
     .hamburger-menu {
